Neues Tabellendesign mit History-Button

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -101,24 +101,16 @@
                 <table id="fileTable" style="display: none;">
 <thead>
     <tr>
-        <th width="40">⋮⋮</th>
         <th width="50" title="Doppelklick auf Nummer um Position zu ändern">#</th>
-        <th width="30">
-            <input type="checkbox" id="selectAll" onchange="toggleSelectAll()">
-        </th>
-        <th width="30" title="Deutsche Version vorhanden" onclick="toggleCompletionAll()" style="cursor: pointer;">✓</th>
         <th class="sortable">Dateiname</th>
         <th class="sortable">Ordner</th>
         <th>EN Text</th>
         <th>DE Text</th>
         <th width="200" title="Debug: Aufgelöster Pfad">🔍 Aufgelöster Pfad</th>
         <th width="200" title="Pfad der DE-Datei">DE Pfad</th>
-        <th width="60">Audio</th>
-        <th width="60">DE Audio</th>
         <th width="60">Upload</th>
-        <th width="30" title="DE-Audio beschnitten">✂️</th>
+        <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
-        <th width="50"></th>
     </tr>
 </thead>
                     <tbody id="fileTableBody"></tbody>
