--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -101,6 +101,7 @@
                 <table id="fileTable" style="display: none;">
 <thead>
     <tr>
+        <th width="30">↕</th>
         <th width="50" title="Doppelklick auf Nummer um Position zu ändern">#</th>
         <th class="sortable">Dateiname</th>
         <th class="sortable">Ordner</th>
@@ -111,6 +112,7 @@
         <th width="60">Upload</th>
         <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
+        <th width="60">Löschen</th>
     </tr>
 </thead>
                     <tbody id="fileTableBody"></tbody>
