Fix stop button showing as play button in DE-Audio editing

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -314,7 +314,7 @@
                     <div style="display:flex;align-items:center;gap:10px;">
                         <canvas id="waveOriginal" width="500" height="80" style="width:100%; background:#111;"></canvas>
                         <button id="playOrigPreview" class="de-play-btn" onclick="playOriginalPreview()">▶</button>
-                        <button class="de-play-btn" onclick="stopEditPlayback()">⏹</button>
+                        <button class="de-stop-btn" onclick="stopEditPlayback()">⏹</button>
                     </div>
                 </div>
                 <div style="display:flex;flex-direction:column;gap:5px;margin-top:10px;">
@@ -322,7 +322,7 @@
                     <div style="display:flex;align-items:center;gap:10px;">
                         <canvas id="waveEdited" width="500" height="80" style="width:100%; background:#111;"></canvas>
                         <button id="playDePreview" class="de-play-btn" onclick="playDePreview()">▶</button>
-                        <button class="de-play-btn" onclick="stopEditPlayback()">⏹</button>
+                        <button class="de-stop-btn" onclick="stopEditPlayback()">⏹</button>
                     </div>
                 </div>
             </div>
