Zeige Audiodauer im Bearbeitungsdialog

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -310,7 +310,7 @@
             <h3>✂️ DE-Audio bearbeiten</h3>
             <div style="margin-bottom:15px;">
                 <div style="display:flex;flex-direction:column;gap:5px;">
-                    <span class="wave-label">EN (Original)</span>
+                    <span class="wave-label" id="waveLabelOriginal">EN (Original)</span>
                     <div style="display:flex;align-items:center;gap:10px;">
                         <canvas id="waveOriginal" width="500" height="80" style="width:100%; background:#111;"></canvas>
                         <button id="playOrigPreview" class="de-play-btn" onclick="playOriginalPreview()">▶</button>
@@ -318,7 +318,7 @@
                     </div>
                 </div>
                 <div style="display:flex;flex-direction:column;gap:5px;margin-top:10px;">
-                    <span class="wave-label">DE (bearbeiten)</span>
+                    <span class="wave-label" id="waveLabelEdited">DE (bearbeiten)</span>
                     <div style="display:flex;align-items:center;gap:10px;">
                         <canvas id="waveEdited" width="500" height="80" style="width:100%; background:#111;"></canvas>
                         <button id="playDePreview" class="de-play-btn" onclick="playDePreview()">▶</button>
