--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -107,8 +107,7 @@
         <th class="sortable">Ordner</th>
         <th>EN Text</th>
         <th>DE Text</th>
-        <th width="200" title="Pfad der EN-Datei">EN-Pfad</th>
-        <th width="200" title="Pfad der DE-Datei">DE Pfad</th>
+        <th width="120" title="Pfad der EN- und DE-Datei">Pfad</th>
         <th width="60">Upload</th>
         <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
