Verbessere Dialogfokus und Versionsanzeige

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -349,6 +349,9 @@
     </details>
 
 
+    <!-- Versionsanzeige -->
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.8.0</a>
+
     <script src="src/main.js"></script>
 </body>
 </html>
