--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -296,12 +296,16 @@
         <div class="dialog">
 <button class="dialog-close-btn" onclick="closeApiDialog()">×</button>
             <h3>🔊 ElevenLabs API</h3>
-            <div class="customize-field">
+            <div class="customize-field api-key-field">
                 <label>API-Key:</label>
-                <input type="password" id="apiKeyInput" style="width:80%;">
+                <input type="password" id="apiKeyInput" style="width:70%;" oninput="validateApiKey()">
+                <button class="btn eye-btn" onclick="toggleApiKey()">👁</button>
+                <span id="apiKeyStatus" class="status-indicator"></span>
             </div>
-            <div id="voiceIdList" style="margin-top:15px;"></div>
+            <div id="voiceIdList" class="voice-id-list"></div>
             <div class="dialog-buttons">
+                <button class="btn" onclick="testVoiceIds()">Voice-IDs testen</button>
+                <button class="btn" onclick="clearAllVoiceIds()">Alle zurücksetzen</button>
                 <button class="btn btn-secondary" onclick="closeApiDialog()">Abbrechen</button>
                 <button class="btn btn-success" onclick="saveApiSettings()">Speichern</button>
             </div>
@@ -368,7 +372,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.13.3</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.14.0</a>
 
     <script src="src/main.js"></script>
 </body>
