feat: allow custom voices

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -306,6 +306,7 @@
             <div class="dialog-buttons">
                 <button class="btn" onclick="testVoiceIds()">Voice-IDs testen</button>
                 <button class="btn" onclick="clearAllVoiceIds()">Alle zurücksetzen</button>
+                <button class="btn" onclick="addCustomVoice()">Neue Stimme</button>
                 <button class="btn btn-secondary" onclick="closeApiDialog()">Abbrechen</button>
                 <button class="btn btn-success" onclick="saveApiSettings()">Speichern</button>
             </div>
@@ -372,7 +373,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.14.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.15.0</a>
 
     <script src="src/main.js"></script>
 </body>
