Add Ordner-Debug function

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -392,12 +392,14 @@
     <!-- Umschaltbare Debug-Konsole -->
     <details id="debugConsoleWrapper" style="margin:10px 0;">
         <summary>🛠️ Debug-Konsole</summary>
+        <button class="btn btn-secondary" onclick="showFolderDebug()">🐞 Ordner prüfen</button>
+        <div id="folderDebug" style="margin:10px 0;"></div>
         <pre id="debugConsole" style="max-height:200px; overflow:auto; background:#000; color:#0f0; padding:5px;"></pre>
     </details>
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.18.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.19.0</a>
 
     <script src="src/main.js"></script>
 </body>
