Funktion erweitert: Ordnerliste

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -391,6 +391,8 @@
 <button class="dialog-close-btn" onclick="closeMissingFoldersDialog()">×</button>
             <h3>🚫 Fehlende Ordner</h3>
             <div id="missingFoldersList" style="margin-bottom:15px;"></div>
+            <h4>📁 Ordner in der Datenbank</h4>
+            <div id="databaseFoldersList" style="margin-bottom:15px;"></div>
             <div class="dialog-buttons">
                 <button class="btn btn-danger" id="deleteAllMissingBtn">Alle löschen</button>
                 <button class="btn btn-secondary" onclick="closeMissingFoldersDialog()">Schließen</button>
@@ -412,7 +414,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.20.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.21.0</a>
 
     <script src="src/main.js"></script>
 </body>
