feat: add per-file dubbing

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -111,6 +111,7 @@
         <th>DE Text</th>
         <th width="120" title="Pfad der EN- und DE-Datei">Pfad</th>
         <th width="60">Upload</th>
+        <th width="60">Dubbing</th>
         <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
         <th width="60">Löschen</th>
