--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -386,6 +386,19 @@
         </div>
     </div>
 
+    <!-- Dubbing Log Dialog -->
+    <div class="dialog-overlay" id="dubbingLogDialog">
+        <div class="dialog">
+<button class="dialog-close-btn" onclick="closeDubbingLog()">×</button>
+            <h3>📝 Dubbing-Protokoll</h3>
+            <pre id="dubbingLog" style="max-height:300px; overflow:auto; background:#000; color:#0f0; padding:10px;"></pre>
+            <div class="dialog-buttons">
+                <button class="btn btn-secondary" onclick="copyDubbingLog()">Log kopieren</button>
+                <button class="btn btn-secondary" onclick="closeDubbingLog()">Schließen</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Missing Folders Dialog -->
     <div class="dialog-overlay" id="missingFoldersDialog">
         <div class="dialog">
@@ -415,7 +428,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.21.1</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.23.0</a>
 
     <script src="src/main.js"></script>
 </body>
