--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -428,7 +428,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v3.23.2</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v__VERSION__</a>
 
     <script src="src/main.js"></script>
 </body>
