--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -400,6 +400,7 @@
             <pre id="dubbingLog" style="max-height:300px; overflow:auto; background:#000; color:#0f0; padding:10px;"></pre>
             <div class="dialog-buttons">
                 <button class="btn btn-secondary" onclick="copyDubbingLog()">Log kopieren</button>
+                <button class="btn btn-danger" onclick="clearDubbingLog()">Log löschen</button>
                 <button class="btn btn-secondary" onclick="closeDubbingLog()">Schließen</button>
             </div>
         </div>
@@ -434,7 +435,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.15.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.16.0</a>
 
     <script src="src/main.js"></script>
 </body>
