feat: Download button for dubbings

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -112,6 +112,7 @@
         <th width="120" title="Pfad der EN- und DE-Datei">Pfad</th>
         <th width="60">Upload</th>
         <th width="60">Dubbing</th>
+        <th width="90" id="dubDownloadHeader" style="display:none;">Download DE</th>
         <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
         <th width="60">Löschen</th>
@@ -435,7 +436,7 @@
 
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.26.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.27.0</a>
 
     <script src="src/main.js"></script>
 </body>
