Fehler-Toast und automatisches Dubbing-Update

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -438,8 +438,11 @@
     </details>
 
 
+    <!-- Toast-Meldungen -->
+    <div id="toastContainer"></div>
+
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.29.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.30.0</a>
 
     <script src="src/main.js"></script>
 </body>
