--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -113,7 +113,7 @@
         <th width="120" title="Pfad der EN- und DE-Datei">Pfad</th>
         <th width="60">Upload</th>
         <th width="60">Dubbing</th>
-        <th width="40">Status</th>
+        <th width="40">Dub-Status</th>
         <th width="90" id="dubDownloadHeader" style="display:none;">Download DE</th>
         <th width="60">Historie</th>
         <th width="60">Bearbeiten</th>
@@ -442,7 +442,7 @@
     <div id="toastContainer"></div>
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.33.0</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.34.0</a>
 
     <script src="src/main.js"></script>
 </body>
