Fix DevTools-Knopf im Browser

--- a/hla_translation_tool.html
+++ b/hla_translation_tool.html
@@ -47,7 +47,7 @@
                         <div class="settings-item" onclick="repairProjectFolders()">🔧 Ordner reparieren</div>
                     </div>
                 </div>
-                <button class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
+                <button id="devToolsButton" class="btn btn-secondary" onclick="toggleDevTools()">🐞 DevTools</button>
                 <button class="btn btn-secondary" onclick="openDubbingLog()">📝 Protokoll</button>
             </div>
 			
@@ -442,7 +442,7 @@
     <div id="toastContainer"></div>
 
     <!-- Versionsanzeige -->
-    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.34.5</a>
+    <a id="versionLink" href="https://github.com/Lumorn/hla_translation_tool" target="_blank">v1.34.6</a>
 
     <script src="src/main.js"></script>
 </body>
