feat: zeigen gespeicherte Dubbing-Parameter im API-Dialog

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -317,6 +317,8 @@
             </div>
             <div id="voiceIdList" class="voice-id-list"></div>
             <div id="customVoicesList" class="custom-voices-list"></div>
+            <h4>Aktuelle Dubbing-Standardwerte</h4>
+            <ul id="voiceSettingsDisplay" class="voice-defaults-list"></ul>
             <div class="dialog-buttons">
                 <button class="btn" onclick="testVoiceIds()">Voice-IDs testen</button>
                 <button class="btn" onclick="clearAllVoiceIds()">Alle zurücksetzen</button>
