feat: add sequential project playback

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -78,6 +78,10 @@
                     <div class="progress-stat" id="folderProgress">0 Ordner</div>
                     <div class="progress-stat" id="globalProjectProgress">0% gesamt</div>
                 </div>
+                <div class="project-playback">
+                    <button id="projectPlayPauseBtn" onclick="toggleProjectPlayback()">▶</button>
+                    <button id="projectStopBtn" onclick="stopProjectPlayback()">⏹</button>
+                </div>
             </div>
 
             <!-- Scan Progress -->
