Speichere Autoübersetzungen und zeige Fortschritt

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -92,6 +92,14 @@
                 </div>
             </div>
 
+            <!-- Übersetzungsfortschritt -->
+            <div class="translate-progress" id="translateProgress">
+                <div class="translate-status" id="translateStatus">Übersetze...</div>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="translateFill"></div>
+                </div>
+            </div>
+
             <!-- Table -->
             <div class="table-container">
                 <div id="emptyState" class="empty-state">
