--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -404,6 +404,7 @@
             <div class="dialog-buttons">
                 <button class="btn btn-secondary" onclick="resetDeEdit()">Zurücksetzen</button>
                 <button id="volumeMatchBtn" class="btn btn-secondary" onclick="applyVolumeMatch()">Lautstärke angleichen</button>
+                <button id="radioEffectBtn" class="btn btn-secondary" onclick="applyRadioEffect()">Funkgerät-Effekt</button>
                 <button class="btn btn-secondary" onclick="applyDeEdit()">Speichern</button>
                 <button class="btn btn-secondary" onclick="closeDeEdit()">Abbrechen</button>
             </div>
