--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -401,6 +401,10 @@
                 <label>Start (ms): <input type="number" id="editStart" value="0" step="100"></label>
                 <label>Ende (ms): <input type="number" id="editEnd" value="0" step="100"></label>
             </div>
+            <div style="margin-bottom:15px;">
+                <label>Funk-Effekt: <span id="radioStrengthDisplay"></span></label>
+                <input type="range" id="radioStrength" min="0" max="1" step="0.1">
+            </div>
             <div class="dialog-buttons">
                 <button class="btn btn-secondary" onclick="resetDeEdit()">Zurücksetzen</button>
                 <button id="volumeMatchBtn" class="btn btn-secondary" onclick="applyVolumeMatch()">Lautstärke angleichen</button>
