Audio-Duplikate verhindern

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -40,6 +40,7 @@
                     <button id="settingsButton" class="btn btn-secondary" onclick="toggleSettingsMenu()">⚙️ Einstellungen</button>
                     <div class="settings-menu" id="settingsMenu">
                         <div class="settings-item" onclick="cleanupDuplicates()">🧹 Duplikate bereinigen</div>
+                        <div class="settings-item" onclick="scanAudioDuplicates()">🎵 Audio-Duplikate</div>
                         <div class="settings-item" onclick="showBackupDialog()">💾 Backup</div>
                         <div class="settings-item" onclick="showApiDialog()">🔊 ElevenLabs API</div>
                         <div class="settings-item" onclick="resetFileDatabase()">🔄 Reset DB</div>
