--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -402,7 +402,7 @@
                 <label>Start (ms): <input type="number" id="editStart" value="0" step="100"></label>
                 <label>Ende (ms): <input type="number" id="editEnd" value="0" step="100"></label>
             </div>
-            <div style="margin-bottom:15px; display:flex; flex-wrap:wrap; gap:10px;">
+            <div class="radio-settings" style="margin-bottom:15px; display:flex; flex-wrap:wrap; gap:10px; position:relative;">
                 <label title="Mischverhältnis">Wet: <span id="radioStrengthDisplay"></span>
                     <input type="range" id="radioStrength" min="0" max="1" step="0.05">
                 </label>
@@ -421,12 +421,14 @@
                 <label title="Häufigkeit der Knackser">Knackser: <span id="radioCrackleDisplay"></span>
                     <input type="range" id="radioCrackle" min="0" max="1" step="0.05">
                 </label>
+                <button class="btn-reset-settings" onclick="resetRadioSettings()">⟳ Standardwerte</button>
+            </div>
+            <div class="effect-buttons" style="margin-bottom:15px; display:flex; gap:10px;">
+                <button id="volumeMatchBtn" class="effect-btn" onclick="applyVolumeMatch()">🔊 Lautstärke angleichen</button>
+                <button id="radioEffectBtn" class="effect-btn" onclick="applyRadioEffect()">📻 Funkgerät-Effekt</button>
             </div>
             <div class="dialog-buttons">
                 <button class="btn btn-secondary" onclick="resetDeEdit()">Zurücksetzen</button>
-                <button id="volumeMatchBtn" class="btn btn-secondary" onclick="applyVolumeMatch()">Lautstärke angleichen</button>
-                <button id="radioEffectBtn" class="btn btn-secondary" onclick="applyRadioEffect()">Funkgerät-Effekt</button>
-                <button class="btn btn-secondary" onclick="resetRadioSettings()">Standardwerte</button>
                 <button class="btn btn-secondary" onclick="applyDeEdit()">Speichern</button>
                 <button class="btn btn-secondary" onclick="closeDeEdit()">Abbrechen</button>
             </div>
